--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -20,7 +20,7 @@ block noscript-head
 		}
 
 block body
-	+hero(image, name, lead)
+	+hero(name, lead, image)
 		.buttons.is-pulled-right
 			+link("https://goo.gl/maps/1trdfAtqE4A2", true)(class="button is-primary is-inverted is-outlined")
 				+icon("map-marker-alt")
