--- a/src/frontend/partials/mixins/hero.pug
+++ b/src/frontend/partials/mixins/hero.pug
@@ -1,4 +1,4 @@
-mixin hero(image, name, lead)
+mixin hero(name, lead, image)
 	header.hero.is-medium.has-background-image(style=`background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(${requireLocalImage(image)});`)
 		if name || lead
 			+hero-body(name, lead)
