--- a/src/frontend/partials/mixins/all.pug
+++ b/src/frontend/partials/mixins/all.pug
@@ -33,8 +33,8 @@
 mixin title(title)
 	title= `${title} | UHSSE`
 
-mixin body(name, lead, image)
-	+hero(name, lead, image)
+mixin body(name, lead, image, lazy)
+	+hero(name, lead, image, lazy)
 
 	.container
 		block
@@ -63,8 +63,27 @@ mixin table(headers)
 			else
 				block
 
-mixin iframe(source)
-	iframe(src=source style="width: 100%;" height=500)
+mixin img(source, caption, lazy)
+	-
+		const className = lazy ? "lozad" : null,
+			src = lazy ? null : source,
+			dataSrc = lazy ? source : null;
+
+	img(class=className src=src data-src=dataSrc alt=caption)
+	if lazy
+		noscript
+			img(src=source alt=caption)
+
+mixin iframe(source, lazy)
+	-
+		const className = lazy ? "lozad" : null,
+			src = lazy ? null : source,
+			dataSrc = lazy ? source : null;
+
+	iframe(class=className src=src data-src=dataSrc style="width: 100%;" height=500)
+	if lazy
+		noscript
+			iframe(src=source style="width: 100%;" height=500)
 
 include card.pug
 include message.pug
