--- a/src/frontend/partials/base.pug
+++ b/src/frontend/partials/base.pug
@@ -11,6 +11,10 @@ html(lang="en")
 
 		noscript
 			style.
+				.lozad {
+					display: none;
+				}
+
 				.notification.is-docked {
 					position: fixed !important;
 					right: 0;
