--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -23,10 +23,23 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 
 .hero.has-background-image {
 	position: relative;
+	z-index: 1;
 
 	background-position: center !important;
 	background-size: cover !important;
 	background-repeat: no-repeat !important;
+
+	&::after {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.65);
+	}
 }
 
 .media-left {
