--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -19,6 +19,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 @import "~bulma/sass/elements/title.sass";
 @import "~bulma/sass/elements/button.sass";
 @import "~bulma/sass/elements/icon.sass";
+@import "~bulma/sass/elements/form.sass";
 @import "~bulma/sass/elements/tag.sass";
 
 .hero.has-background-image {
