Update Siema noscript styles

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -19,7 +19,7 @@ block noscript-head
 			display: none;
 		}
 		
-		.siema > li:not(:first-child) {
+		.siema > figure:not(:first-child) {
 			display: none;
 		}
 
