Import Bulma notification style for when JavaScript is disabled

--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -15,6 +15,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 @import "~bulma/sass/elements/container.sass";
 @import "~bulma/sass/elements/content.sass";
 @import "~bulma/sass/elements/table.sass";
+@import "~bulma/sass/elements/notification.sass";
 @import "~bulma/sass/elements/image.sass";
 @import "~bulma/sass/elements/title.sass";
 @import "~bulma/sass/elements/button.sass";
