Revise wording of no JavaScript warning

--- a/src/frontend/partials/base.pug
+++ b/src/frontend/partials/base.pug
@@ -46,7 +46,7 @@ html(lang="en")
 					
 					br
 					
-					| Some parts of this site may not work properly.
+					| Some parts of this site may not work as intended.
 					| To view this site properly, please enable JavaScript.
 
 			include footer.pug
