Create links mixin for a list of links

--- a/src/frontend/pages/extracurriculars/index.pug
+++ b/src/frontend/pages/extracurriculars/index.pug
@@ -73,10 +73,7 @@ block body
 				.content.column.is-two-fifths
 					h4.is-size-5 Links
 					if !isEmptyObjectArray(athletics.links)
-						.list.is-hoverable.is-scrollable
-							each link in athletics.links
-								+link(link.link, true)(class="list-item")
-									= link.name
+						+links(athletics.links)
 					else
 						+message(
 							"There are no links currently available. Check back later!"
