--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -56,7 +56,7 @@ block body
 
 		+section(assignments.anchorId, assignments.name, assignments.lead)
 			if !isEmptyObjectArray(assignments.assignments)
-				.list.is-hoverable.is-scrollable
+				+links
 					each assignment in assignments.assignments
 						+link(assignment.link, true)(class="list-item")
 							= assignment.name
