--- a/src/frontend/pages/counseling/index.pug
+++ b/src/frontend/pages/counseling/index.pug
@@ -38,11 +38,8 @@ block body
 
 					.column
 						h4.is-size-5 Links
-						if !isEmptyObject(about.links)
-							.list.is-hoverable.is-scrollable
-								each link in about.links
-									+link(link.link, true)(class="list-item")
-										= link.name
+						if !isEmptyObjectArray(about.links)
+							+links(about.links)
 						else
 							+message(
 								"There are no links currently available. Check back later!"
