--- a/src/frontend/pages/information/index.pug
+++ b/src/frontend/pages/information/index.pug
@@ -178,10 +178,8 @@ block body
 													span.tag= member.position
 
 		+section(resources.anchorId, resources.name, resources.lead)
-			if !isEmptyObject(resources.resources)
-				.list.is-hoverable.is-scrollable
-					each resource in resources.resources
-						+link(resource.link, true)(class="list-item")= resource.name
+			if !isEmptyObjectArray(resources.resources)
+				+links(resources.resources)
 			else
 				+message(
 					"There are no resources currently available. Check back later!"
