Reverse School Events' columns on mobile

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -50,7 +50,7 @@ block body
 						+pillar(pillar.icon, pillar.name, pillar.description)
 
 		+section("schoolEvents", "School Events", "News flash")
-			.columns.is-variable.is-8
+			.columns.is-variable.is-8.is-reverse-mobile
 				.column
 					+iframe("https://calendar.google.com/calendar/embed?src=oaomn16s4itdvibnciuc45386k%40group.calendar.google.com&ctz=America/New_York", true)
 				
