--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -55,14 +55,4 @@ block body
 											p= department.description
 
 		+section(assignments.anchorId, assignments.name, assignments.lead)
-			if !isEmptyObjectArray(assignments.assignments)
-				.list.is-hoverable.is-scrollable
-					each assignment in assignments.assignments
-						+link(assignment.link, true)(class="list-item")
-							= assignment.name
-							if !isEmptyObjectArray(assignment.grades)
-								small.is-size-7  (Grade 
-									each grade, index in assignment.grades
-										= index === assignment.grades.length - 1 ? `${grade})` : `${grade}, `
-			else
-				+message("There are no assignments currently available. Please check back later!", "No Assignments")(class="is-warning")
+			+links(assignments.assignments.map(assignment => (assignment.details = `Grade ${assignment.grades.join(", ")}`, assignment)), "assignments")
