Format General Resources' links code

--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -55,4 +55,14 @@ block body
 											p= department.description
 
 		+section(assignments.anchorId, assignments.name, assignments.lead)
-			+links(assignments.assignments.map(assignment => (assignment.details = `Grade ${assignment.grades.join(", ")}`, assignment)), "assignments")
+			+links(
+				assignments.assignments.map(
+					assignment => (
+						(assignment.details = `Grade ${assignment.grades.join(
+							", "
+						)}`),
+						assignment
+					)
+				), 
+				"assignments"
+			)
