--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -2,6 +2,8 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 
+$primary: #d1001f;
+
 @import "~bulma/sass/utilities/_all.sass";
 @import "~bulma/sass/base/_all.sass";
 @import "~bulma/sass/components/navbar.sass"; // https://github.com/jgthms/bulma/issues/2154
