Separate Counseling about section into two separate content containers

--- a/src/frontend/pages/counseling/index.pug
+++ b/src/frontend/pages/counseling/index.pug
@@ -25,16 +25,18 @@ block body
 			.content
 				.columns.is-variable.is-8
 					.column.is-three-fifths
-						h4.is-size-5 Mission Statement
-						p= about.missionStatement
+						.content
+							h4.is-size-5 Mission Statement
+							p= about.missionStatement
 
-						h4.is-size-5 Philosophy
-						p= about.philosophy.description
-						p The following principles are the basis for the UHSSE school counseling program:
+						.content
+							h4.is-size-5 Philosophy
+							p= about.philosophy.description
+							p The following principles are the basis for the UHSSE school counseling program:
 
-						ul
-							each principle in about.philosophy.principles
-								li= principle
+							ul
+								each principle in about.philosophy.principles
+									li= principle
 
 					.column
 						h4.is-size-5 Links
