Add JSON key for the "Get Directions" link

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -26,7 +26,7 @@ block noscript-head
 block body
 	+hero(name, lead, image)
 		.buttons.is-pulled-right
-			+link("https://goo.gl/maps/1trdfAtqE4A2", true)(class="button is-primary is-inverted is-outlined")
+			+link(directionsLink, true)(class="button is-primary is-inverted is-outlined")
 				+icon("map-marker-alt")
 				span Get Directions
 
