Fix the navbar to the top of the screen

--- a/src/frontend/partials/navbar.pug
+++ b/src/frontend/partials/navbar.pug
@@ -1,4 +1,4 @@
-nav#navbar.navbar(role="navigation" aria-label="main navigation")
+nav#navbar.navbar.is-fixed-top(role="navigation" aria-label="main navigation")
 	.navbar-brand
 		a.navbar-item(href="/")
 			h1.title.is-4= navbar.brand
