--- a/src/frontend/partials/base.pug
+++ b/src/frontend/partials/base.pug
@@ -1,7 +1,7 @@
 include ./mixins/all.pug
 
 doctype html
-html(lang="en")
+html.has-navbar-fixed-top(lang="en")
 	head
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
