Add is-dark modifier to time part of open house tags

--- a/src/frontend/pages/prospective/index.pug
+++ b/src/frontend/pages/prospective/index.pug
@@ -58,5 +58,5 @@ block body
 													span.tag.is-info
 														+icon("calendar")
 														span= date.date
-													span.tag= date.time
+													span.tag.is-dark= date.time
 			
