Link to humans.txt in base.pug

--- a/src/frontend/partials/base.pug
+++ b/src/frontend/partials/base.pug
@@ -23,6 +23,9 @@ html.has-navbar-fixed-top(lang="en")
 		//- Allows control over how referrer information is passed
 		meta(name="referrer" content="no-referrer")
 
+		//- Links to information about the author(s) of the document
+		link(rel="author" href="humans.txt")
+
 		block head
 
 		noscript
