--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -31,6 +31,11 @@ $danger: $dark-red;
 @import "~bulma/sass/elements/form.sass";
 @import "~bulma/sass/elements/tag.sass";
 
+::selection {
+	background-color: $primary;
+	color: $white;
+}
+
 .hero.has-background-image {
 	position: relative;
 	z-index: 0;
