Replace Font Awesome with Zondicons

--- a/src/frontend/pages/counseling/index.pug
+++ b/src/frontend/pages/counseling/index.pug
@@ -13,7 +13,7 @@ mixin test(testDates, registrationDeadlines, registrationLink)
 				each registrationDeadline in registrationDeadlines
 					li= registrationDeadline
 	+link(registrationLink, true)(class="button is-link is-outlined is-fullwidth")
-		+icon("envelope-open-text")
+		+icon("inbox-full")
 		span Register
 
 block head
