--- a/src/frontend/pages/prospective/index.pug
+++ b/src/frontend/pages/prospective/index.pug
@@ -20,7 +20,7 @@ block body
 									.level.field.is-grouped.is-grouped-multiline
 										.control
 											+link(application.link, true)(class="button is-link is-outlined")
-												+icon("envelope-open-text")
+												+icon("inbox-full")
 												span Apply
 										.control
 											span.tag.is-warning.is-medium.has-text-weight-semibold
