--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -1,6 +1,4 @@
-$fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "./zondicons";
 
 $dark-red: #d1001f;
 
