Update footer text with v2 redesign credits

--- a/src/partials/footer.pug
+++ b/src/partials/footer.pug
@@ -4,10 +4,14 @@ footer.footer
 		
 		br
 		
-		| Originally developed by #[+link("https://berenson.me", true) Spencer Berenson]
-		| and #[+link("http://duro.me", true) Andi Duro].
-		| Initial design by #[+link("https://github.com/tpatel1781", true) Tej Patel].
+		| Developed by #[+link("https://berenson.me", true) Spencer Berenson] &
+		| #[+link("http://duro.me", true) Andi Duro].
+		| Initial redesign by #[+link("https://github.com/tpatel1781", true) Tej Patel].
 		
 		br
 
-		| Maintained and updated by #[+link("https://github.com/LeoPiGuy", true) Leo Gold].
+		| Redesign v2 by #[+link("https://berenson.me", true) Spencer Berenson]
+
+		br
+
+		small Maintained by #[+link("https://github.com/LeoPiGuy", true) Leo Gold].
