Add missing period to footer text

--- a/src/partials/footer.pug
+++ b/src/partials/footer.pug
@@ -10,7 +10,7 @@ footer.footer
 		
 		br
 
-		| Redesign v2 by #[+link("https://berenson.me", true) Spencer Berenson]
+		| Redesign v2 by #[+link("https://berenson.me", true) Spencer Berenson].
 
 		br
 
