Update dependencies to latest version

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -26,7 +26,7 @@ $danger: $dark-red;
 @import "~bulma/sass/elements/title.sass";
 @import "~bulma/sass/elements/button.sass";
 @import "~bulma/sass/elements/icon.sass";
-@import "~bulma/sass/elements/form.sass";
+@import "~bulma/sass/form/_all.sass";
 @import "~bulma/sass/elements/tag.sass";
 
 ::selection {
