--- a/src/pages/extracurricular/index.pug
+++ b/src/pages/extracurricular/index.pug
@@ -45,7 +45,7 @@ mixin activity(name, description, leaders, roomNumbers, link)
 				+link(link, true)(class="card-footer-item") Link
 
 block head
-	+title("Extracurriculars")
+	+title("Extracurricular")
 
 block body
 	+body(name, lead, image)
