Update footer credits

--- a/src/partials/footer.pug
+++ b/src/partials/footer.pug
@@ -4,13 +4,9 @@ footer.footer
 		
 		br
 		
-		| Developed by #[+link("https://berenson.me", true) Spencer Berenson] &
-		| #[+link("http://duro.me", true) Andi Duro].
-		| Initial redesign by #[+link("https://github.com/tpatel1781", true) Tej Patel].
-		
-		br
-
-		| Redesign v2 by #[+link("https://berenson.me", true) Spencer Berenson].
+		small.
+			Developed by #[+link("https://berenson.me", true) Spencer Berenson] & #[+link("http://duro.me", true) Andi Duro].
+			Design by #[+link("https://berenson.me", true) Spencer Berenson] & #[+link("https://github.com/tpatel1781", true) Tej Patel].
 
 		br
 
