--- a/src/pages/prospective/index.pug
+++ b/src/pages/prospective/index.pug
@@ -5,6 +5,11 @@ block head
 
 block body
 	+body(name, lead, image)
+		if welcomeVideoId
+			- var welcomeVideoLink = "https://www.youtube-nocookie.com/embed/" + welcomeVideoId
+			+section("welcome-video")
+				figure.image.is-16by9
+					iframe(src=welcomeVideoLink allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='').has-ratio
 		+section("overview")
 			.columns.is-variable.is-8
 				.column
